# cmake-demo

./: CMakeLists.txt  README.md  main.c
Modules/: FindMathUltility.cmake  FindPrintUltility.cmake
add-lib/: CMakeLists.txt  add-source.c  add-source.h  export-add.h
print-lib/: CMakeLists.txt  export-print.h  print-source.c  print-source.h
